--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>{WEBSITE_NAME}</title>
+        <title>{website_name}</title>
         
         <link rel="stylesheet" href="styles.css">
     </head> 
     <body>
         <footer>
-            <p>{FOOTER_TEXT}</p>
+            <p>{footer_text}</p>
         </footer>
 
     </body>
