--- a/public_html/acerca.html
+++ b/public_html/acerca.html
@@ -9,14 +9,8 @@
         <link rel="stylesheet" href="styles.css">
     </head> 
     <body>
-<h1 id="bienvenido-a-mi-página-web">Bienvenido a mi página web</h1>
-<h2 id="hecho-con-hackfun-static-site-generator">Hecho con Hackfun
-Static Site Generator</h2>
-<ul>
-<li>Open Source</li>
-<li>Liviano</li>
-<li>Pensado para durar</li>
-</ul>
+<h1 id="acerca-de-mi">Acerca de mi</h1>
+<p>Me gusta: - Aprender cosas nuevas - Experimentar con tecnología</p>
         <footer>
             <p>- Hecho con Hackfun SSG -</p>
         </footer>
