--- a/public_html/contacto.html
+++ b/public_html/contacto.html
@@ -9,14 +9,9 @@
         <link rel="stylesheet" href="styles.css">
     </head> 
     <body>
-<h1 id="bienvenido-a-mi-página-web">Bienvenido a mi página web</h1>
-<h2 id="hecho-con-hackfun-static-site-generator">Hecho con Hackfun
-Static Site Generator</h2>
-<ul>
-<li>Open Source</li>
-<li>Liviano</li>
-<li>Pensado para durar</li>
-</ul>
+<h1 id="contactarme">Contactarme</h1>
+<p>Podés escribirme por mail <a
+href="contacto@hackfunrosario.com">acá</a>.</p>
         <footer>
             <p>- Hecho con Hackfun SSG -</p>
         </footer>
